<resources>
    <string name="app_name">Quiz</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="rohitghate10431_gmail_com">rohitghate10431@gmail.com</string>
    <string name="facebook_page">Follow on Facebook</string>
    <string name="communication">Communication</string>
    <string name="nav_rate">Rate or Feedback</string>
    <string name="nav_share">Share</string>
    <string name="nav_privacy_policy">Privacy Policy</string>
    <string name="nav_terms_conditions">Terms and Conditions</string>
    <string name="website">Visit Website</string>
    <string name="more">More</string>
    <string name="visit_website">Visit Website</string>
    <string name="facebook">Facebook</string>
    <string name="java">Java</string>
    <string name="sign_in">Sign In</string>
    <string name="here">Here</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="new_account_sign_up_here">New Account? Sign Up Here</string>
    <string name="coding">Coding</string>
    <string name="todo">TODO</string>
    <string name="_0_5">0/5</string>
    <string name="a">A</string>
    <string name="start_a_new_journey">Start a New Journey</string>
    <string name="c">C</string>
    <string name="todo1">TODO</string>
    <string name="cplus">C++</string>
    <string name="python">Python</string>
    <string name="todo2">TODO</string>
    <string name="Java">java</string>
    <string name="todo3">TODO</string>
    <string name="Mysql">MySQL</string>
    <string name="__0_5">0/5</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="Next">Next</string>
    <string name="Quit">Quit</string>
    <string name="Question">Question</string>
    <string name="your_Score">Your Score</string>
    <string name="o">0</string>
    <string name="A1">A</string>
    <string name="B1">B</string>
    <string name="C1">C</string>
    <string name="D1">D</string>
    <string name="Next1">Next</string>
    <string name="Quit1">Quit</string>
    <string name="Question1">Question</string>
    <string name="your_Score1">Your Score</string>
    <string name="_0_5_">0/5</string>
    <string name="A3">A</string>
    <string name="B3">B</string>
    <string name="C3">C</string>
    <string name="D3">D</string>
    <string name="Next3">Next</string>
    <string name="Quit3">Quit</string>
    <string name="Question3">Question</string>
    <string name="Your_Score3">Your Score</string>
    <string name="_0">0</string>
    <string name="_0__5">0/5</string>
    <string name="A4">A</string>
    <string name="B4">B</string>
    <string name="C4">C</string>
    <string name="D4">D</string>
    <string name="Next4">Next</string>
    <string name="Quit4">Quit</string>
    <string name="Question4">Question</string>
    <string name="your_score4">Your Score</string>
    <string name="_0_">0</string>
    <string name="_0_5__">0/5</string>
    <string name="A5">A</string>
    <string name="B5">B</string>
    <string name="C5">C</string>
    <string name="D5">D</string>
    <string name="Next5">Next</string>
    <string name="Question5">Question</string>
    <string name="your_score5">Your Score</string>
    <string name="_0__">0</string>
    <string name="B6">B</string>
    <string name="your_score">Your Score</string>
    <string name="__0">0</string>
    <string name="email1">email</string>
    <string name="already_account_login_here">Already Account? Login Here</string>
    <string name="password1">password</string>
    <string name="register1">Register</string>
    <string name="phone_no">Phone no</string>
    <string name="full_name1">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="here1">Here</string>
    <string name="restart">RESTART</string>
    <string name="todo11">TODO</string>
    <string name="todo5">TODO</string>
    <string name="Programing_Laguage_Learning">Programing laguage learning</string>
    <string name="Safari">Safari</string>

</resources>