<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:background="#C68A3F"
    tools:context=".QuestionActivity5">

    <TextView
        android:id="@+id/DispName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0_5__"
        android:textAlignment="center"
        android:textColor="#092242"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/DispName"
        android:layout_alignEnd="@id/DispName"
        android:id="@+id/answergrp"
        android:layout_centerVertical="true">


        <RadioButton
            android:id="@+id/radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/A5"
            android:textColor="#3E2723" />

        <RadioButton
            android:id="@+id/radiobutton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/B5"
            android:textColor="#3E2723" />

        <RadioButton
            android:id="@+id/radiobutton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/C5"
            android:textColor="#3E2723" />

        <RadioButton
            android:id="@+id/radiobutton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/D5"
            android:textColor="#3E2723" />

    </RadioGroup>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/answergrp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="27dp"
        android:text="@string/Next5"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="16sp"
        android:background="@drawable/optiondesign"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/buttonquit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/button3"
        android:text="@string/Quit"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="16sp"
        android:background="@drawable/optiondesign"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/tvque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/answergrp"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="52dp"
        android:text="@string/Question5"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#3E2723"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textview3"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="@string/your_score5"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#5D4037"
        android:textSize="19sp"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textview4"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/_0__"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#5D4037"
        android:textSize="19sp"
        tools:ignore="RelativeOverlap,TextSizeCheck" />







</RelativeLayout>