<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="70dp"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        >
        <TextView
            android:id="@+id/textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/coding"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:textSize="30sp"
            android:fontFamily="sans-serif-condensed-medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageview"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:ignore="UnknownIdInLayout" />
        <TextView
            android:id="@+id/textview2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/start_a_new_journey"
            app:layout_constraintEnd_toStartOf="@+id/imageview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview"/>

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textview"
            android:src="@drawable/anlogo"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageview">

<androidx.cardview.widget.CardView
                android:onClick="C"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textview3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/c"
                        android:textSize="24sp"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:layout_below="@+id/bus"
                        />
                <ImageView
                    android:id="@+id/bus"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/todo1"
                    android:src="@drawable/c"
                    />

            </RelativeLayout>

            </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:onClick="Cplus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            >


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >


                <TextView
                    android:id="@+id/textview4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/cplus"
                    android:layout_below="@+id/imageview3"
                    android:textSize="24sp"
                    android:fontFamily="sans-serif-condensed-medium"
                    />
                <ImageView
                    android:id="@+id/imageview3"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/cplus"
                    />



            </RelativeLayout>
        </androidx.cardview.widget.CardView>




        </LinearLayout>





        <LinearLayout
            android:id="@+id/linearlayout3"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout">

            <androidx.cardview.widget.CardView
                android:onClick="Python"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textview6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="10dp"
                        android:text="@string/python"
                        android:textSize="24sp"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:layout_below="@+id/bus1"
                        />

                    <ImageView
                        android:id="@+id/bus1"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@string/todo2"
                        android:src="@drawable/python"
                        tools:ignore="ImageContrastCheck" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:onClick="java"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                >


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >


                    <TextView
                        android:id="@+id/textview7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/Java"
                        android:layout_below="@+id/train"
                        android:textSize="24sp"
                        android:fontFamily="sans-serif-condensed-medium"
                        />
                    <ImageView
                        android:id="@+id/train"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@string/todo3"
                        android:src="@drawable/java"
                        />



                </RelativeLayout>
            </androidx.cardview.widget.CardView>




        </LinearLayout>




        <LinearLayout
            android:id="@+id/linearlayout2"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout3">

            <androidx.cardview.widget.CardView
                android:onClick="MySQL"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textview8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="10dp"
                        android:text="@string/Mysql"
                        android:textSize="24sp"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:layout_below="@+id/cycle"
                        />
                    <ImageView
                        android:id="@+id/cycle"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/mysql"
                        />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>








        </LinearLayout>






    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>